beverageWebAppPoc/cd/k8s/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: beveragewebapppoc
spec:
  replicas: 1
  selector:
    matchLabels:
      resource-namespace: jebsen
      resource-env: development
      resource-name: beveragewebapppoc
  template:
    metadata:
      namespace: development
      name: beveragewebapppoc
      labels:
        resource-namespace: jebsen
        resource-env: development
        resource-name: beveragewebapppoc
    spec:
      containers:
        - name: api
          image: ghcr.io/jebsen-git/beveragewebapppoc:develop-latest
          args: ["--spring.profiles.active=dev"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-image-pull-credentials
