beverageWebAppPoc/cd/k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: beveragewebapppoc
spec:
  selector:
    resource-namespace: jebsen
    resource-env: development
    resource-name: beveragewebapppoc
  ports:
    - name: http
      targetPort: 8080
      port: 8080
