beverageWebAppPoc/cd/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: beveragewebapppoc
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: prometheus
spec:
  ingressClassName: kong
  rules:
    - host: servicetest.jebsen.com
      http:
        paths:
          - backend:
              service:
                name: beveragewebapppoc
                port:
                  name: http
            path: /beveragewebapppoc/api
            pathType: ImplementationSpecific
